add options for hour and minutes with js

--- a/alarm clock/inex.html
+++ b/alarm clock/inex.html
@@ -15,25 +15,17 @@
             <div class="controls">
                 <select>
                     <option value="hour" selected hidden>Hour</option>
-                    <option value="00">00</option>
-                    <option value="01">01</option>
-                    <option value="02">02</option>
-                    <option value="03">03</option>
-
                 </select>
             </div>
             <div class="controls">
                 <select>
                     <option value="minutes" selected hidden>Minutes</option>
-                    <option value="00">00</option>
-                    <option value="01">01</option>
-                    <option value="02">02</option>
-                    <option value="03">03</option>
-
                 </select>
             </div>
         </div>
         <button> set alarm </button>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
