add current time to h1 and refreshing every second

--- a/alarm clock/inex.html
+++ b/alarm clock/inex.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <img src="./img/alarm-clock.png" alt="clock">
-        <h1 class="time">23:40:50</h1>
+        <h1 class="time"></h1>
         <div class="content">
             <div class="controls">
                 <select>
